# study-groups-problem

./: CMakeLists.txt  README.md
docs/: ~$дача 2.docx  Задача 2.docx  пошаговый алгоритм.docx
sources/: CMakeLists.txt
sources/console/: CMakeLists.txt  Generator.cpp  Generator.h  main.cpp
sources/core/: BBSolver.cpp  BBSolver.h  CMakeLists.txt  Matrix.h  SolveTree.cpp  SolveTree.h
sources/gui/: BFCalc.cpp  BFCalc.h  BFResultModel.cpp  BFResultModel.h  Bruteforce.cpp  Bruteforce.h  CMakeLists.txt  Core.cpp  Core.h  GradesModel.cpp  GradesModel.h  GroupsModel.cpp  GroupsModel.h  ImportanceModel.cpp  ImportanceModel.h  SolveWrapper.cpp  SolveWrapper.h  main.cpp  res.qrc
sources/gui/qml/: AccentBadge.qml  CheckPage.qml  GradesView.qml  GroupsView.qml  ImportanceView.qml  InitPage.qml  StyledTabButton.qml  TreePage.qml  main.qml
sources/tests/: CMakeLists.txt  CoreTest.cpp  CoreTest.h  main.cpp
